--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="id">id</string>
     <string name="title">title</string>
     <string name="_0_video_series">0 video series</string>
-    <string name="playlist">playlist</string>
+    <string name="playlist">Playlist</string>
+    <string name="back">Back</string>
+    <string name="description">Description</string>
 </resources>
